generate embeds with the stats
